// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicButton renders a basic button 1`] = `
<button>
  label
</button>
`;

exports[`BasicButton renders a primary button 1`] = `
<button
  data-variant="primary"
>
  label
</button>
`;
